assignment ventura/VPCVentura.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: This template provisions the VenturaVPC Network Infrastructure

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label: 
          Default: "VPC CIDR"
        Parameters:
          - VpcCIDR
      -
        Label:
          Default: "Subnet CIDR"
        Parameters:
          - PublicVenturaProdNATALBSubnet1CIDR
          - PublicVenturaProdALBSubnet2CIDR
          - PrivateVenturaProdWebSubnet1CIDR
          - PrivateVenturaProdWebSubnet2CIDR
          - PrivateVenturaProdAppSubnet1CIDR
          - PrivateVenturaProdAppSubnet2CIDR
          - PrivateVenturaProdDBSubnet1CIDR
          - PrivateVenturaProdDBSubnet2CIDR
      - 
        Label:
          Default: "SSH CIDR"
        Parameters:
          - SSHlocation

Parameters: 
  VpcCIDR:
    Default: 10.0.0.0/16
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String

  PublicVenturaProdNATALBSubnet1CIDR:
    Default: 10.0.1.0/28
    Description: Please enter the IP range (CIDR notation) for PublicVenturaProdNATALBSubnet1
    Type: String

  PublicVenturaProdALBSubnet2CIDR:
    Default: 10.0.3.0/28
    Description: Please enter the IP range (CIDR notation) for PublicVenturaProdALBSubnet2
    Type: String  

  PrivateVenturaProdWebSubnet1CIDR:
    Default: 10.0.5.0/23
    Description: Please enter the IP range (CIDR notation) for PrivateVenturaProdWebSubnet1
    Type: String 

  PrivateVenturaProdWebSubnet2CIDR:
    Default: 10.0.10.0/23
    Description: Please enter the IP range (CIDR notation) for PrivateVenturaProdWebSubnet2
    Type: String
    
  PrivateVenturaProdAppSubnet1CIDR:
    Default: 10.0.15.0/23
    Description: Please enter the IP range (CIDR notation) for PrivateVenturaProdAppSubnet1
    Type: String

  PrivateVenturaProdAppSubnet2CIDR:
    Default: 10.0.20.0/23
    Description: Please enter the IP range (CIDR notation) for PrivateVenturaProdAppSubnet2
    Type: String

  PrivateVenturaProdDBSubnet1CIDR:
    Default: 10.0.25.0/27
    Description: Please enter the IP range (CIDR notation) for PrivateVenturaProdDBSubnet1
    Type: String

  PrivateVenturaProdDBSubnet2CIDR:
    Default: 10.0.30.0/27
    Description: Please enter the IP range (CIDR notation) for PrivateVenturaProdDBSubnet2
    Type: String 

  SSHlocation:
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 0.0.0.0/0
    Description: The IP address range that can be used to access the web server using SSH
    MaxLength: '18'
    MinLength: '9'
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: VenturaProdVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: Name
          Value: Ventura IGW 

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicVenturaProdNATALBSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 0, !GetAZs '']
      CidrBlock: !Ref PublicVenturaProdNATALBSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: Public Ventura Prod NAT ALB Subnet 1
      VpcId: !Ref VPC

  PublicVenturaProdALBSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 1, !GetAZs '']
      CidrBlock: !Ref PublicVenturaProdALBSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: Public Ventura Prod ALB Subnet 2
      VpcId: !Ref VPC
   
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: Ventura Public Route Table
      VpcId: !Ref VPC
 
  PublicRoute:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  
  PublicVenturaProdNATALBSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicVenturaProdNATALBSubnet1

  PublicVenturaProdALBSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicVenturaProdALBSubnet2

  PrivateVenturaProdWebSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 0, !GetAZs '']
      CidrBlock: !Ref PrivateVenturaProdWebSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Ventura Prod Web Subnet1 | Web Tier
      VpcId: !Ref VPC 

  PrivateVenturaProdWebSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 1, !GetAZs '']
      CidrBlock: !Ref PrivateVenturaProdWebSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Ventura Prod Web Subnet2 | Web Tier
      VpcId: !Ref VPC 

  PrivateVenturaProdAPPSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 0, !GetAZs '']
      CidrBlock: !Ref PrivateVenturaProdAppSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Ventura Prod App Subnet1 | App Tier
      VpcId: !Ref VPC 

  PrivateVenturaProdAPPSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 1, !GetAZs '']
      CidrBlock: !Ref PrivateVenturaProdAppSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Ventura Prod App Subnet2 | App Tier
      VpcId: !Ref VPC 
   
  PrivateVenturaProdDBSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 0, !GetAZs '']
      CidrBlock: !Ref PrivateVenturaProdDBSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Ventura Prod DB Subnet1 | Database Tier
      VpcId: !Ref VPC 
  
  PrivateVenturaProdDBSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [ 1, !GetAZs '']
      CidrBlock: !Ref PrivateVenturaProdDBSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: Private Ventura Prod DB Subnet2 | Database Tier
      VpcId: !Ref VPC 

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable HTTP/HTTPS Access on Port 80/443
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0 
      Tags: 
        - Key: Name
          Value: ALB Security group
      VpcId: !Ref VPC
  
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: SSH Security Group
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHlocation
      Tags: 
        - Key: Name
          Value: SSH Security group
      VpcId: !Ref VPC
  
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable HTTP/HTTPS Access via Port 80/443
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ALBSecurityGroup
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref SSHSecurityGroup
      Tags: 
        - Key: Name
          Value: WebServer Security Group
      VpcId: !Ref VPC
  
  DataBaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Open database for access
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
      Tags: 
        - Key: Name
          Value: Database Security Group
      VpcId: !Ref VPC

Outputs:
  VPC:
    Description: VPC ID
    Export:
      Name: !Sub ${AWS::StackName}-VPC
    Value: !Ref VPC
  
  PublicVenturaProdNATALBSubnet1:
    Description: Public Ventura Prod NAT ALB Subnet 1 ID
    Export:
      Name: !Sub ${AWS::StackName}-PublicVenturaProdNATALBSubnet1
    Value: !Ref PublicVenturaProdNATALBSubnet1

  PublicVenturaProdALBSubnet2:
    Description: Public Ventura Prod ALB Subnet 2 ID
    Export:
      Name: !Sub ${AWS::StackName}-PublicVenturaProdALBSubnet2
    Value: !Ref PublicVenturaProdALBSubnet2

  PrivateVenturaProdWebSubnet1:
    Description: Private Ventura Prod Web Subnet 1 ID
    Export:
      Name: !Sub ${AWS::StackName}-PrivateVenturaProdWebSubnet1
    Value: !Ref PrivateVenturaProdWebSubnet1

  PrivateVenturaProdWebSubnet2:
    Description: Private Ventura Prod Web Subnet 2 ID
    Export:
      Name: !Sub ${AWS::StackName}-PrivateVenturaProdWebSubnet2
    Value: !Ref PrivateVenturaProdWebSubnet2

  PrivateVenturaProdAPPSubnet1:
    Description: Private Ventura Prod APP Subnet 1 ID
    Export:
      Name: !Sub ${AWS::StackName}-PrivateVenturaProdAPPSubnet1
    Value: !Ref PrivateVenturaProdAPPSubnet1

  PrivateVenturaProdAPPSubnet2:
    Description: Private Ventura Prod APP Subnet 2 ID
    Export:
      Name: !Sub ${AWS::StackName}-PrivateVenturaProdAPPSubnet2
    Value: !Ref PrivateVenturaProdAPPSubnet2

  PrivateVenturaProdDBSubnet1:
    Description: Private Ventura Prod DB Subnet 1 ID
    Export:
      Name: !Sub ${AWS::StackName}-PrivateVenturaProdDBSubnet1
    Value: !Ref   PrivateVenturaProdDBSubnet1

  PrivateVenturaProdDBSubnet2:
    Description: Private Ventura Prod DB Subnet 2 ID
    Export:
      Name: !Sub ${AWS::StackName}-PrivateVenturaProdDBSubnet2
    Value: !Ref PrivateVenturaProdDBSubnet2



  ALBSecurityGroup:
    Description: Application Load Balancer Security Group ID
    Export:
      Name: !Sub ${AWS::StackName}-ALBSecurityGroup
    Value: !Ref ALBSecurityGroup

  SSHSecurityGroup:
    Description: SSH Security Group ID
    Export:
      Name: !Sub ${AWS::StackName}-SSHSecurityGroup
    Value: !Ref SSHSecurityGroup
  
  WebServerSecurityGroup:
    Description: Webserver Security Group ID
    Export:
      Name: !Sub ${AWS::StackName}-WebserverSecurityGroup
    Value: !Ref WebServerSecurityGroup

  DataBaseSecurityGroup:
    Description: DataBase Security Group ID
    Export:
      Name: !Sub ${AWS::StackName}-DataBaseSecurityGroup
    Value: !Ref DataBaseSecurityGroup
